# refactored-olimpicos

./: pyproject.toml
notebooks/: final_project.ipynb  olimpicos.ipynb  olympics-data-cleaning-exploration-prediction.ipynb
