[tool.poetry]
name = "olimpiadas"
version = "0.1.0"
description = ""
authors = ["oswaldo gomez <oswaldo.gomez@spglobal.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
notebook = "^6.1.6"
pandas = "^1.2.0"
matplotlib = "^3.3.3"
xlrd = "^2.0.1"
statsmodels = "^0.12.1"
scikit-learn = "0.23.2"
pycaret = "^2.2.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
